# ninfer-3090

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  VERSION  vcpkg.json
bench/: CMakeLists.txt  README.md  causal_conv1d_silu_bench.cu  e2e_bench.cpp  e2e_bench_support.cpp  e2e_bench_support.h  embed_gather_bench.cu  embedding_bench.cu  gated_delta_rule_bench.cu  gdn_gating_bench.cu  gdn_gating_proj_bench.cu  gdn_in_ab_prefill_bench.cu  gqa_attention_bench.cu  l2norm_bench.cu  linear_bench.cu  linear_op_bench.cu  qus_bench.cpp  qus_bench_support.cpp  qus_bench_support.h  residual_add_bench.cu  rmsnorm_bench.cu  sampling_select_bench.cu  sigmoid_gate_mul_bench.cu  sigmoid_mul_bench.cu  silu_mul_bench.cu  target_verify_bench.cpp
benchmark-results/: 35b-api-server.requests.jsonl  35b-cli-ctx4096-k0-ttft-windows.txt  35b-cli-ctx4096-k0-v2-windows.txt  35b-cli-ctx4096-k3-ttft-windows.txt  35b-cli-ctx4096-k3-v2-windows.txt  35b-cli-realgen-k0-round2-windows.txt  35b-cli-realgen-k3-round2-windows.txt  35b-cli-realgen-k3-round2-wsl-ctx81920.txt  35b-k0-sparse-d3-balanced-eight-warp.csv  35b-k0-sparse-d3-nine-warp-control.csv  35b-k0-sparse-d3-payload-control.csv  35b-k0-sparse-d3-production.csv  35b-k0-sparse-d4-balanced-eight-warp-r4.csv  35b-k0-sparse-d4-nine-warp-r1.csv  35b-k0-sparse-d4-payload-control.csv  35b-k0-sparse-d4-production.csv  35b-k0-sparse-moe-candidates.csv  35b-k0-sparse-production.csv  35b-k0-w8-gdn-r2.csv  35b-k0-w8-gdn-r4.csv  35b-k0-w8-gdn-r8.csv  35b-k0-w8-linear-add-auto.csv  35b-k0-w8-linear-add-w8-simt-r8c4.csv  35b-k0-w8-linear-add-w8-simt-r8c8.csv  35b-q6-head-g16s3.csv  35b-q6-head-g16s3cg-lb2.csv  35b-q6-head-g16s3cg.csv  35b-q6-head-g8s4.csv  35b-q6-head-q6-simt-r8c4.csv  35b-q6-head-q6-simt-r8c8.csv  35b-text-only-smoke-windows.txt  35b-vnext-d2-warp-baseline.csv  35b-vnext-d2-warp-idlane.csv  35b-vnext-w8-attn-v16-r16.csv  35b-vnext-w8-attn-v16-r4.csv  35b-vnext-w8-input-baseline.csv  35b-vnext-w8-input-sharedx.csv  35b-vnext-w8-input-v16.csv  35b-vnext-w8-input-v32.csv  35b-windows-k0-ctx4096-vnext-baseline.json  (+37 more)
docs/: 2026-07-01-prefill-linear-foundation-design.md  2026-07-02-gqa-prefill-flash-attention-design.md  2026-07-03-mtp-foundation-part1-verification.md  2026-07-03-mtp-roadmap.md  2026-07-03-mtp-spec-decode-overview.md  2026-07-05-gqa-decode-bandwidth-design.md  2026-07-08-gqa-decode-verify-fa-comparison.md  2026-07-08-gqa-prefill-fa-parity-audit.md  2026-07-08-kv-cache-int8-quantization-design.md  2026-07-10-q5090-artifact-loading-design.md  2026-07-10-w8g32-tensor-core-gemm-design.md  2026-07-11-dense-gdn-in-ab-roofline-design.md  README.md  cli.md  design.md  l0-infrastructure-design.md  l1-gdn-port-design.md  l1-kernel-layering.md  l1-op-test-standard.md  l1-operator-catalog.md  l2-model-card-design.md  m2.8-pre-m3-standard.md  m2.8-pre-m3-standard.zh.md  m3-readiness.md  ninfer-container-format.md  ninfer-engine-architecture.md  ninfer-naming.md  ninfer-project-positioning.md  ninfer-tensor-formats.md  op-development.md  performance.md  q5090_packed_file_format_v2.md  q5090_packed_file_format_v3.md  q5090_packed_file_format_v4.md  qwen3.6-27b-architecture.md  qwen3.6-27b-ninfer-artifact.md  qwen3.6-35b-a3b-architecture.md  qwen3.6-35b-a3b-ninfer-artifact.md  qwen3.6-35b-a3b-operator-inventory.md  qwen3_6_27b_q5090_final_quant_format_v1.md  (+6 more)
eval/: README.md
scripts/: package-release.ps1
src/: CMakeLists.txt  main.cpp
src/targets/qwen3_6_27b_rtx5090/: CMakeLists.txt
src/targets/qwen3_6_27b_rtx5090/export/ninfer/targets/qwen3_6_27b_rtx5090/: package.h
src/targets/qwen3_6_27b_rtx5090/impl/: config.h  package.cpp  variant.cpp  variant.h
src/targets/qwen3_6_27b_rtx5090/impl/diagnostic/: activation_dump_access.cpp  activation_dump_access.h
src/targets/qwen3_6_27b_rtx5090/impl/frontend/: chat_template.cpp  frontend.cpp  tokenizer.cpp  tokenizer.h
src/targets/qwen3_6_27b_rtx5090/impl/load/: bindings.cpp  bindings.h
src/targets/qwen3_6_27b_rtx5090/impl/program/: layouts.cpp  layouts.h  program.cpp  program.h  request_plan.cpp
src/targets/qwen3_6_27b_rtx5090/impl/schedule/: mtp.cpp  schedule.h  text_context.cpp  text_context.h  text_prefill.cpp  vision.cpp  vision_context.cpp  visual_scatter.h
tests/: CMakeLists.txt  README.md  test_anthropic_schema.cpp  test_artifact_materialization.cpp  test_bench_matrix.py  test_bench_report_tools.py  test_bench_tokenizer_tools.py  test_decode_e2e_report_redaction.py  test_e2e_bench_support.cpp  test_engine_memory_stats.cpp  test_engine_mtp_e2e.cpp  test_engine_real_file.cpp  test_generation_budget.cpp  test_graph_readiness_structure.cpp  test_hardening_cleanup_structure.cpp  test_kv_cache.cpp  test_model_bind.cpp  test_model_blocks.cpp  test_model_config.cpp  test_ninfer_bench_support.cpp  test_openai_schema.cpp  test_q5090_pack_golden.cpp  test_q5090_parser.cpp  test_qus_bench_support.cpp  test_qwen_text_cli.cpp  test_qwen_text_runner.cpp  test_qwen_text_tokenizer.cpp  test_request_log.cpp  test_row_split_pack_golden.cpp  test_serve_options.cpp  (+4 more)
(+853 files in other folders)
